[gd_scene load_steps=4 format=2]

[ext_resource path="res://menus/assets/ilustracion3_menu_principal.png" type="Texture" id=1]
[ext_resource path="res://menus/MainMenu.gd" type="Script" id=2]

[sub_resource type="CanvasItemMaterial" id=1]

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NinePatchRect" type="NinePatchRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
region_rect = Rect2( 0, 0, 1200, 600 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 50.0
margin_top = -150.0
margin_right = 152.0
margin_bottom = -20.0
custom_constants/separation = 5
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartButton" type="Button" parent="VBoxContainer"]
material = SubResource( 1 )
margin_right = 102.0
margin_bottom = 40.0
focus_neighbour_top = NodePath("../QuitButton")
focus_neighbour_bottom = NodePath("../OptionButton")
size_flags_vertical = 3
text = "Start"

[node name="OptionButton" type="Button" parent="VBoxContainer"]
margin_top = 45.0
margin_right = 102.0
margin_bottom = 85.0
focus_neighbour_top = NodePath("../StartButton")
focus_neighbour_bottom = NodePath("../QuitButton")
size_flags_vertical = 3
text = "Options"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
margin_top = 90.0
margin_right = 102.0
margin_bottom = 130.0
focus_neighbour_top = NodePath("../OptionButton")
focus_neighbour_bottom = NodePath("../StartButton")
size_flags_vertical = 3
text = "Quit"

[connection signal="pressed" from="VBoxContainer/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="VBoxContainer/OptionButton" to="." method="_on_OptionButton_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
